# ia-project3

./: .gitignore  CMakeLists.txt  README.md  main.cpp
classes/: NeuralNetwork.hpp  layer.cpp
datasets/: extract_vectores_caracteristicos.py  extraxt_vectores_caracteristicos.py  g1_proyecto_ia_features.pkl  g1_proyecto_ia_testing_features.csv  g1_proyecto_ia_testing_features.pkl  g1_proyecto_ia_training_features.csv  g1_proyecto_ia_training_features.pkl
